--- a/agov/composer.json
+++ b/agov/composer.json
@@ -23,7 +23,7 @@
         "drupal/agov_base": "1.x-dev",
         "drupal/agov_whitlam": "1.x-dev",
         "drupal/better_normalizers": "~1.0",
-        "drupal/core": "~8.2.3",
+        "drupal/core": "~8.4",
         "drupal/ctools": "~3.0",
         "drupal/default_content": "~1.0",
         "drupal/ds": "~2.6",
@@ -47,14 +47,13 @@
         "drupal/token": "~1.0",
         "drupal/twitter_block": "~2.1",
         "drupal/video_embed_field": "~1.3",
-        "drupal/workbench_moderation": "~1.1"
+        "drupal/workbench_moderation": "~1.1",
+        "drush/drush": "^8.1.15"
     },
     "require-dev": {
         "drupal-composer/drupal-scaffold": "~2.2",
         "drupal/coder": "~8.2",
-        "drupal/config_devel": "~1.0",
-        "drupal/console": "~0.11",
-        "drush/drush": "~8.1"
+        "drupal/config_devel": "~1.0"
     },
     "repositories": [
         {
