--- a/agov/modules/custom/agov_media/config/install/core.entity_form_display.media.video.default.yml
+++ b/agov/modules/custom/agov_media/config/install/core.entity_form_display.media.video.default.yml
@@ -1,3 +1,4 @@
+uuid: 781960ee-e474-41b0-b604-b01ae0071227
 langcode: en
 status: true
 dependencies:
@@ -5,6 +6,7 @@ dependencies:
     - field.field.media.video.field_media_video_embed_field
     - media_entity.bundle.video
   module:
+    - path
     - video_embed_field
 id: media.video.default
 targetEntityType: media
@@ -25,6 +27,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
+  path:
+    type: path
+    weight: 30
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
   uid: true
