--- a/agov/modules/custom/agov_standard_page/config/install/core.entity_form_display.node.standard_page.default.yml
+++ b/agov/modules/custom/agov_standard_page/config/install/core.entity_form_display.node.standard_page.default.yml
@@ -56,6 +56,13 @@ content:
     weight: 3
     third_party_settings: {  }
     region: content
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 120
+    third_party_settings: {  }
+    region: content
   sticky:
     type: boolean_checkbox
     settings:
