--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     "source": "https://github.com/previousnext/agov"
   },
   "require": {
+    "drush/drush": "^8.1.15"
   },
   "require-dev": {
-    "drush/drush": "~8.1",
     "drupal/coder": "~8.2",
     "drupal/console": "~0.10"
   },
