--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,7 @@ jobs:
           name: Install
           command: |
             make link-profile install
+            curl http://127.0.0.1 > /dev/null
 
       - run:
           name: Test
