--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,10 +61,10 @@ jobs:
             tuner --conf=php > /usr/local/etc/php/conf.d/tuner.ini
             apache2ctl start
 
-      - run:
-          name: Test PHPUnit
-          command: |
-            make test-phpunit
+#      - run:
+#          name: Test PHPUnit
+#          command: |
+#            make test-phpunit
 
       - run:
           name: Test Simpletest
