--- a/config/install/filter.format.basic_html.yml
+++ b/config/install/filter.format.basic_html.yml
@@ -3,6 +3,7 @@ status: true
 dependencies:
   module:
     - editor
+    - entity_embed
 name: 'Basic HTML'
 format: basic_html
 weight: 0
@@ -13,7 +14,7 @@ filters:
     status: true
     weight: -10
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote> <code> <ul> <ol> <li> <dl> <dt> <dd> <h2> <h3> <h4> <h5> <h6> <p> <br> <span> <a href class=" button button--large button--wide"> <img src data-entity-type data-entity-uuid data-align data-caption alt>'
+      allowed_html: '<em> <strong> <cite> <blockquote> <code> <ul> <ol> <li> <dl> <dt> <dd> <h2> <h3> <h4> <h5> <h6> <p> <br> <span> <a href class=" button button--large button--wide"> <img src data-entity-type data-entity-uuid data-align data-caption alt> <drupal-entity data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button>'
       filter_html_help: false
       filter_html_nofollow: false
   filter_align:
@@ -27,12 +28,6 @@ filters:
     provider: filter
     status: true
     weight: 8
-    settings: {  }
-  filter_html_image_secure:
-    id: filter_html_image_secure
-    provider: filter
-    status: true
-    weight: 9
     settings: {  }
   filter_htmlcorrector:
     id: filter_htmlcorrector
@@ -49,6 +44,12 @@ filters:
   filter_autop:
     id: filter_autop
     provider: filter
+    status: true
+    weight: 0
+    settings: {  }
+  entity_embed:
+    id: entity_embed
+    provider: entity_embed
     status: true
     weight: 0
     settings: {  }
