Move to pnx_media and update to core media (#893)
* Add media embed icon
* Configure browser
* Switch to pnx_media
* Use pnx_media_embed
* Fix text format in test
* Update gov_base and agov_whitlam
* Skip module config test
* Install schema for media
* Fix broken config test

--- a/agov.info.yml
+++ b/agov.info.yml
@@ -21,6 +21,7 @@ dependencies:
   - help
   - image
   - layout_discovery
+  - media
   - menu_ui
   - options
   - path
@@ -44,6 +45,8 @@ dependencies:
   - pathauto
   - twitter_block
   - page_manager
+  - pnx_media
+  - pnx_media_embed
   - fences
   - token
   - text_icon
