--- a/composer.json
+++ b/composer.json
@@ -29,24 +29,26 @@
         "drupal/ds": "~3.1",
         "drupal/embed": "~1.0",
         "drupal/entity": "~1.0",
-        "drupal/entity_browser": "~1.0",
+        "drupal/entity_browser": "~2.0",
         "drupal/entity_embed": "~1.0",
         "drupal/fences": "~2.0",
         "drupal/inline_entity_form": "~1.0",
         "drupal/link_attributes": "~1.0",
-        "drupal/media_entity": "~1.6",
-        "drupal/media_entity_browser": "~1.0",
+        "drupal/media_entity": "~1.0",
+        "drupal/media_entity_browser": "~2.0",
         "drupal/media_entity_image": "~1.2",
         "drupal/metatag": "~1.0",
         "drupal/page_manager": "~4.0",
         "drupal/panels": "~4.2",
         "drupal/password_policy": "~3.0",
         "drupal/pathauto": "~1.0",
+        "drupal/pnx_media": "~1.0",
+        "drupal/pnx_media_embed": "~1.0",
         "drupal/scheduled_updates": "~1.0",
         "drupal/simple_sitemap": "~2.7",
         "drupal/token": "~1.0",
         "drupal/twitter_block": "~2.1",
-        "drupal/video_embed_field": "~1.3",
+        "drupal/video_embed_field": "~2.0",
         "drupal/workbench_moderation": "~1.1",
         "drush/drush": "^8.1.15"
     },
@@ -92,9 +94,6 @@
             },
             "drupal/page_manager": {
                 "Fix contextual links on page manager pages": "https://www.drupal.org/files/issues/page_manager-block_content_contextual-2601004-14.patch"
-            },
-            "drupal/media_entity_browser": {
-                "Add view as a config dependency": "https://www.drupal.org/files/issues/meb_add_config-2850574-2.patch"
             }
         }
     },
