--- a/modules/custom/agov_media/agov_media.info.yml
+++ b/modules/custom/agov_media/agov_media.info.yml
@@ -5,16 +5,10 @@ package: aGov
 core: '8.x'
 
 dependencies:
-  - media_entity
-  - media_entity_image
-  - video_embed_media
+  - pnx_media
   - entity_embed
-  - entity_browser
-  - media_entity_browser
-  - entity_browser_entity_form
 
 config_devel:
-  - core.entity_form_display.media.image.default
   - core.entity_form_display.media.video.default
   - core.entity_view_display.media.image.default
   - core.entity_view_display.media.video.default
@@ -22,11 +16,10 @@ config_devel:
   - field.field.media.video.field_media_video_embed_field
   - field.storage.media.field_media_image
   - field.storage.media.field_media_video_embed_field
-  - media_entity.bundle.image
-  - media_entity.bundle.video
   - filter.format.text_and_media
   - editor.editor.text_and_media
   - entity_browser.browser.media_browser
+  - embed.button.media_embed
   - image.style.media_preview
   - image.style.full_page_wide
   - core.entity_view_mode.media.full_page
