--- a/modules/custom/agov_media/config/install/core.entity_view_display.media.image.full_page.yml
+++ b/modules/custom/agov_media/config/install/core.entity_view_display.media.image.full_page.yml
@@ -5,7 +5,7 @@ dependencies:
     - core.entity_view_mode.media.full_page
     - field.field.media.image.field_media_image
     - image.style.full_page_wide
-    - media_entity.bundle.image
+    - media.type.image
   module:
     - fences
     - image
