--- a/modules/custom/agov_media/config/install/core.entity_view_display.media.video.full_page.yml
+++ b/modules/custom/agov_media/config/install/core.entity_view_display.media.video.full_page.yml
@@ -4,7 +4,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.full_page
     - field.field.media.video.field_media_video_embed_field
-    - media_entity.bundle.video
+    - media.type.video
   module:
     - fences
     - video_embed_field
