--- a/modules/custom/agov_media/config/install/embed.button.media_embed.yml
+++ b/modules/custom/agov_media/config/install/embed.button.media_embed.yml
@@ -3,16 +3,17 @@ status: true
 dependencies:
   module:
     - entity_embed
-    - media_entity
-label: Media Embed
+    - media
+label: 'Media Embed'
 id: media_embed
 type_id: entity
 type_settings:
   entity_type: media
   bundles: {  }
   display_plugins:
-    - 'entity_reference:entity_reference_entity_view'
-  entity_browser: media_browser
+    - 'entity_reference:media_thumbnail'
+    - 'view_mode:media.full'
+  entity_browser: media_browser_embed
   entity_browser_settings:
     display_review: false
-icon_uuid: null
+icon_uuid: 790318D7-39D6-417F-86EF-F73C24E2BD17
