--- a/modules/custom/agov_standard_page/config/install/field.storage.node.field_standard_page_media.yml
+++ b/modules/custom/agov_standard_page/config/install/field.storage.node.field_standard_page_media.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - media_entity
+    - media
     - node
 id: node.field_standard_page_media
 field_name: field_standard_page_media
