Issue #2936657 by kim.pepper: Add Linky for link management (#894)
* Issue #2936657 by kim.pepper: Add Linky for link management
* Add linky to default config tests
* Add linkit to default config tests
* Remove UUID from linkit profile

--- a/agov.info.yml
+++ b/agov.info.yml
@@ -42,6 +42,8 @@ dependencies:
   # Contrib modules
   - admin_toolbar
   - better_normalizers
+  - linkit
+  - linky
   - pathauto
   - twitter_block
   - page_manager
