--- a/config/install/editor.editor.basic_html.yml
+++ b/config/install/editor.editor.basic_html.yml
@@ -39,6 +39,9 @@ settings:
             - Styles
             - Source
   plugins:
+    drupallink:
+      linkit_enabled: true
+      linkit_profile: default
     stylescombo:
       styles: "a.button|Button\r\na.button--large|Button Large\r\na.button--wide|Button Wide\r\n\r\n"
     language:
