--- a/config/install/user.role.editor.yml
+++ b/config/install/user.role.editor.yml
@@ -14,6 +14,7 @@ permissions:
   - 'access media overview'
   - 'access shortcuts'
   - 'access toolbar'
+  - 'add linky entities'
   - 'administer comments'
   - 'administer contact forms'
   - 'administer url aliases'
@@ -30,6 +31,7 @@ permissions:
   - 'delete any scheduled_publications scheduled updates'
   - 'delete any standard_page content'
   - 'delete article revisions'
+  - 'delete linky entities'
   - 'delete media'
   - 'delete own article content'
   - 'delete own publication content'
@@ -41,6 +43,7 @@ permissions:
   - 'edit any publication content'
   - 'edit any scheduled_publications scheduled updates'
   - 'edit any standard_page content'
+  - 'edit linky entities'
   - 'edit own article content'
   - 'edit own comments'
   - 'edit own publication content'
@@ -59,10 +62,12 @@ permissions:
   - 'use needs_review_draft transition'
   - 'use needs_review_needs_review transition'
   - 'use published_draft transition'
+  - 'use text format basic_html'
   - 'view all revisions'
   - 'view any unpublished content'
   - 'view article revisions'
   - 'view latest version'
+  - 'view linky entities'
   - 'view media'
   - 'view moderation states'
   - 'view own unpublished content'
