--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,8 @@
         "drupal/fences": "~2.0",
         "drupal/inline_entity_form": "~1.0",
         "drupal/link_attributes": "~1.0",
+        "drupal/linkit": "5.x-dev",
+        "drupal/linky": "^1.0@alpha",
         "drupal/media_entity": "~1.0",
         "drupal/media_entity_browser": "~2.0",
         "drupal/media_entity_image": "~1.2",
