--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,8 @@ dependencies:
     # Tell composer to ignore any changes.
     - composer config --global discard-changes true
     - echo "memory_limit = 256M" > /opt/circleci/php/$(phpenv global)/etc/conf.d/memory.ini
+    - sudo unlink "/usr/lib/apache2/modules/libphp5.so"
+    - sudo ln -s "${PHPENV_ROOT}/versions/$(phpenv global)/usr/lib/apache2/modules/libphp5.so" "/usr/lib/apache2/modules/libphp5.so"
 
     # Symlink some binaries so they're accessible globally.
     - ln -s `pwd`/bin/drush /home/ubuntu/bin/drush
