--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "drupal/agov_base": "1.x-dev",
         "drupal/agov_whitlam": "1.x-dev",
         "drupal/better_normalizers": "~1.0",
-        "drupal/core": "~8.4",
+        "drupal/core": "~8.5",
         "drupal/ctools": "~3.0",
         "drupal/default_content": "~1.0",
         "drupal/ds": "~3.1",
@@ -40,11 +40,11 @@
         "drupal/media_entity_browser": "~2.0",
         "drupal/media_entity_image": "~1.2",
         "drupal/metatag": "~1.0",
-        "drupal/page_manager": "~4.0",
+        "drupal/page_manager": "dev-4.x",
         "drupal/panels": "~4.2",
         "drupal/password_policy": "~3.0",
         "drupal/pathauto": "~1.0",
-        "drupal/pnx_media": "~1.0",
+        "drupal/pnx_media": "dev-1.x",
         "drupal/pnx_media_embed": "~1.0",
         "drupal/scheduled_updates": "~1.0",
         "drupal/simple_sitemap": "~2.7",
@@ -63,7 +63,7 @@
         "jcalderonzumba/gastonjs": "~1.0.2",
         "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
         "mikey179/vfsStream": "~1.2",
-        "phpunit/phpunit": ">=4.8.28 <5",
+        "phpunit/phpunit": "~6.0",
         "vimeo/psalm": "^0.3.39"
     },
     "repositories": [
@@ -91,11 +91,11 @@
             ]
         },
         "patches": {
-            "drupal/core": {
-                "Expand all items": "https://www.drupal.org/files/issues/drupal-8.3.0-menu-expand-all-items-2594425-89.patch"
-            },
             "drupal/page_manager": {
                 "Fix contextual links on page manager pages": "https://www.drupal.org/files/issues/page_manager-block_content_contextual-2601004-14.patch"
+            },
+            "drupal/pnx_media": {
+                "Media types have moved to standard profile": "https://www.drupal.org/files/issues/2937899-4.patch"
             }
         }
     },
