--- a/modules/custom/agov_media/config/install/core.entity_form_display.media.video.default.yml
+++ b/modules/custom/agov_media/config/install/core.entity_form_display.media.video.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.media.video.field_media_video_embed_field
+    - field.field.media.video.field_media_video_file
     - media.type.video
   module:
     - path
@@ -42,4 +43,5 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_media_video_file: true
   uid: true
