--- a/modules/custom/agov_media/config/install/core.entity_view_display.media.video.full_page.yml
+++ b/modules/custom/agov_media/config/install/core.entity_view_display.media.video.full_page.yml
@@ -4,6 +4,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.full_page
     - field.field.media.video.field_media_video_embed_field
+    - field.field.media.video.field_media_video_file
     - media.type.video
   module:
     - fences
@@ -33,6 +34,7 @@ content:
     region: content
 hidden:
   created: true
+  field_media_video_file: true
   name: true
   thumbnail: true
   uid: true
