Issue #2967978 by kim.pepper: Update core to 8.5.3 (#905)
* Issue #2967978 by kim.pepper: Update core to 8.5.3
* Remove lockfile
* Fix cache key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,6 @@ jobs:
 
       - restore_cache:
           keys:
-            - agov-v1-{{ arch }}-{{ checksum "composer.lock" }}
             - agov-v1-{{ arch }}
 
       - run:
@@ -40,7 +39,7 @@ jobs:
             make mkdirs
 
       - save_cache:
-          key: agov-v1-{{ arch }}-{{ checksum "composer.lock" }}
+          key: agov-v1-{{ arch }}
           paths:
             - /root/.composer
 
